1.0dev: Modified the layout of admin pages so that the "Add ..." panels that were on the right side are now flat at the top, and their content reflows as the width of the client area changes. This fixes layout issues on certain browsers and allows for the table below to use the full width, so it's better for small screens as well.
Closes #8866.


git-svn-id: http://trac.edgewall.org/intertrac/log:/trunk@11164 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/admin.css
+++ b/trac/htdocs/css/admin.css
@@ -1,7 +1,5 @@
-/* Avoid layout issues with side fieldsets, see #8866 */
-.admin h1, .admin h2 { margin-top: 0; }
-
 #content.admin h1 { float: left; }
+.admin h1, .admin h2 { margin-top: 0; }
 
 #tabs {
  background: #f7f7f0;
@@ -32,19 +30,45 @@
  padding: 0 0 0 9px;
 }
 #tabs :link, #tabs :visited { border: none; display: block }
-#tabs :link:hover, #tabs :visited:hover { background: transparent;
-  color: #000;
+#tabs :link:hover,
+#tabs :visited:hover {
+ background: transparent;
+ color: #000;
 }
 
 #tabcontent { padding: 0.4em 0 0.4em 2em; margin-left: 12em; min-height: 300px; }
 #tabcontent h2 { color: #333; }
-#tabcontent form { overflow: auto; padding: 0 1px; }
 p.help { color: #666; font-size: 90%; margin: 1em .5em .5em; }
 
 #enumlist tbody td { vertical-align: middle; }
 
-#tabcontent form.addnew { clear: right; float: right; margin: -2em 0 2em 2em; width: 33%; overflow: visible; padding: 0 }
-#tabcontent form.mod { margin-top: 1em; overflow: visible; padding: 0 }
+form.addnew,
+form.addnew + form.addnew { margin: 1em 0; }
+form.addnew + * { margin-top: 2em; }
+form.addnew fieldset { padding: 0.5em 1em; }
+form.addnew div { margin: 0; }
+form.addnew div.field,
+form.addnew div.buttons,
+form.addnew p.help {
+ display: inline-block;
+ /* IE7 hack to make inline-block effective on block element */
+ zoom: 1;
+ *display: inline;
+}
+form.addnew div.field,
+form.addnew div.buttons {
+ padding: 0.2em 0.5em 0.2em 0;
+ white-space: nowrap;
+}
+form.addnew div.buttons input { margin: 0 0.5em 0 0; }
+form.addnew p.hint,
+form.addnew span.hint {
+ padding-left: 0.5em;
+ padding-right: 0.5em;
+}
+form.addnew p.help { margin-top: 0.5em; }
+form.addnew br { display: none; }
+form.mod { margin-top: 1em; }
 form.mod fieldset { margin: 0 }
 form.mod .field { margin: .5em 0; }
 form .field em { color: #888; font-size: smaller }
@@ -55,11 +79,10 @@ table.listing .sel, table.listing .default { text-align: center; width: 1% }
 table.listing .num { text-align: right; width: 1% }
 
 /* Plugins panel */
-form#addplug { width: 35% }
 .plugin {
  background: #f7f7f7;
  border: 1px solid #d7d7d7;
- margin: 0 0 2em;
+ margin: 2em 0 0;
  padding: 2px .5em;
  text-align: left;
 }
